mod_admin: Fix a problem with word-break on Safari 17.4.1

--- a/apps/zotonic_mod_admin/priv/lib-src/zotonic-admin/scss/_base.scss
+++ b/apps/zotonic_mod_admin/priv/lib-src/zotonic-admin/scss/_base.scss
@@ -126,10 +126,8 @@ body.noframe > .admin-container {
 }
 
 .admin-word-break {
-    word-break: break-all;
-
-    // Non standard for webkit
-    word-break: break-word;
+    // word-break: break-all; --- This triggers a layout bug in Safari 17.4.1
+    word-break: auto-phrase;
     hyphens: auto;
 }
 
