--- a/apps/zotonic_mod_admin/priv/lib-src/zotonic-admin/scss/_menu.scss
+++ b/apps/zotonic_mod_admin/priv/lib-src/zotonic-admin/scss/_menu.scss
@@ -1,11 +1,3 @@
 #menu-editor .widget-header {
     height: auto;
 }
-
-/* Fix for Safari 17.4.1 on macOS */
-
-.navbar-nav {
-    li {
-        white-space: nowrap;
-    }
-}
