--- a/apps/zotonic_mod_admin/priv/lib-src/zotonic-admin/scss/_table.scss
+++ b/apps/zotonic_mod_admin/priv/lib-src/zotonic-admin/scss/_table.scss
@@ -59,6 +59,7 @@ table.do_adminLinkedTable {
     .buttons {
         margin-top: -2px;
         margin-bottom: -2px;
+        word-break: none !important;
     }
     
     h5, p {
